--- a/BandRadios/Info.plist
+++ b/BandRadios/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Band Radios</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -24,12 +26,12 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>webservice.bandradios.onebrasilmedia.com.br</key>
+			<key>evp.mm.uol.com.br</key>
 			<dict>
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
-			<key>evp.mm.uol.com.br</key>
+			<key>webservice.bandradios.onebrasilmedia.com.br</key>
 			<dict>
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
