--- a/BandRadios/Info.plist
+++ b/BandRadios/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>evp.mm.uol.com.br</key>
